<resources>
    <string name="app_name">Movie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="genres">genres:</string>
    <string name="original_title">original title:</string>
    <string name="original_language">original language:</string>
    <string name="vote_average">vote average:</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="overview">overview</string>
    <string name="crews">crews</string>
    <string name="casts">casts</string>
</resources>